--- a/content/en/documents.html
+++ b/content/en/documents.html
@@ -65,7 +65,7 @@
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title">Primera aproximación del proyeto INESData</h2>
+                            <h2 class="card-title">Primera aproximación del proyecto INESData</h2>
                             <p class="card-text">Presentación inicial del proyecto por Elena Montiel y Víctor Rodríguez. Abril, 2023. </p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://zenodo.org/record/7845805">Enlace</a></div>
@@ -81,6 +81,35 @@
                       <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1ypNAuMf-D5RnKzEs8_GcR8YVUgZLhJ6u/view?usp=sharing">Link</a></div>
                   </div>
               </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E5. Horizontal Components for Data Spaces</h2>
+                            <p class="card-text">Comprehensive vision of the project that addresses its use cases, technological architecture, and AI services for data management. It details the cloud infrastructure, authentication mechanisms, interoperability, and auditing services, providing a solid framework for the efficient exchange of data between organizations.</p>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E5.Componentes%20horizontales%20para%20espacios%20de%20datos.pdf">Link</a></div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E6. <em>Handbook</em> v2</h2>
+                            <p class="card-text">Practical guide of the project that, in this edition, focuses on the governance of data spaces, incorporating three fundamental annexes: 
+                            </p>
+                            <ul>
+                                <li>Practical guide on compliance issues with Data Space regulations (A1).</li>
+                                <li>Definition of roles in Data Space governance (A2).</li>
+                                <li>Standard contractual models (A3).</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E6.Handbook_ES_v2.pdf">Link</a></div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
         <!-- Footer-->
