--- a/content/es/documentos.html
+++ b/content/es/documentos.html
@@ -62,24 +62,53 @@
             </div>
             <!-- Content Row-->
             <div class="row gx-4 gx-lg-5">
-                <div class="col-md-4 mb-5">
+
+               <!--  <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title">Primera aproximación del proyeto INESData</h2>
+                            <h2 class="card-title">Primera aproximación del proyecto INESData</h2>
                             <p class="card-text">Presentación inicial del proyecto por Elena Montiel y Víctor Rodríguez. Abril, 2023. </p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://zenodo.org/record/7845805">Enlace</a></div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-md-4 mb-5">
                   <div class="card h-100">
                       <div class="card-body">
-                          <h2 class="card-title">E4. Version preliminar del handbook (v1)</h2>
+                          <h2 class="card-title">E4. Version preliminar del <em>handbook</em> (v1)</h2>
                           <p class="card-text">Handbook para ayudar en el despliegue de espacios de datos y de conocimientos en cualquier sector vertical, facilitando todos los aspectos relacionados con la gobernanza de datos y recursos semánticos, la gestión de roles dentro de los espacios de datos, y en general la configuración de la cooperación entre actores para la compartición de datos. 
                       </div>
-                      <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1uSbFhZMxlmG1ETUPKymmvhVqq3eSUj0p/view?usp=sharing">Enlace</a></div>
-                  </div>
-              </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1uSbFhZMxlmG1ETUPKymmvhVqq3eSUj0p/view?usp=sharing">Enlace</a>
+                        </div>
+                    </div> 
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E5. Componentes horizontales para espacios de datos</h2>
+                            <p class="card-text">Visión integral del proyecto que aborda sus casos de uso, la arquitectura tecnológica y los servicios de IA para la gestión de datos. Detalla la infraestructura en la nube, los mecanismos de autenticación, la interoperabilidad y los servicios de auditoría, proporcionando un marco sólido para el intercambio eficiente de datos entre organizaciones.</p>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E5.Componentes%20horizontales%20para%20espacios%20de%20datos.pdf">Enlace</a></div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h2 class="card-title" style="text-align: left;">E6. <em>Handbook</em> v2</h2>
+                            <p class="card-text">Guía práctica del proyecto que, en esta edición, se centra en la gobernanza de los espacios de datos, incorporando tres anexos fundamentales: 
+                            </p>
+                            <ul>
+                                <li>Guía práctica sobre cuestiones de cumplimiento con la normativa del Espacio de Datos (A1).</li>
+                                <li>Definición de roles en la gobernanza del Espacio de Datos (A2).</li>
+                                <li>Los modelos contractuales tipo. (A3).</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/INESData%20-%20E6.Handbook_ES_v2.pdf">Enlace</a></div>
+                    </div>
+                </div>
+                
             </div>
         </div>
         <!-- Footer-->
