--- a/content/es/noticias.html
+++ b/content/es/noticias.html
@@ -53,6 +53,33 @@
                     <div class="col-lg-8">
                         
                         <!-- Post: Post content-->
+                        <article id="post-19">
+                            <!---- Post header ---->
+                            <header class="mb-4">
+                                <!-- Post title-->
+                                <h1 class="fw-bolder mb-1"><em>EU Language Data Space Launch Conference</em> 2025</h1>
+                                <!-- Post meta content-->
+                                <div class="text-muted fst-italic mb-2">Publicado el 25 de Marzo de 2025 por INESData</div>
+                                <!-- Post categories-->
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">diseminación</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">presentación</a>
+                            </header>
+                            <!-- Preview image figure-->
+                            <figure class="mb-4 d-flex justify-content-center">
+                                    <img class="img-fluid rounded me-2" src="../../assets/images/post19b.jpg" alt="..." style="width: 45%; height: auto;" />
+                                    <img class="img-fluid rounded ms-2" src="../../assets/images/post19.jpg" alt="..." style="width: 45%; height: auto;" />
+                            </figure>
+                            <!-- Post content-->
+                            <section class="mb-5">
+                                <p class="fs-5 mb-4">El 19 de marzo de 2025, en Villers-Cotterêts, Francia, se celebró el <em>EU LDS Launch Conference</em>, donde INESData participó aportando su visión como usuario del Common European Language Data Space (LDS).</p>
+                                <p class="fs-5 mb-4">Tras la presentación técnica de INESData, José Manuel Gómez Pérez (Expert AI, INESData) expuso los desafíos y beneficios percibidos. Destacó la dificultad de acceder a datos en múltiples sectores debido a los silos corporativos y la necesidad de un entorno más interoperable.</p>
+                                <p class="fs-5 mb-4">INESData resaltó el potencial del LDS para mejorar la gestión de datos lingüísticos en inteligencia artificial y abogó por estándares comunes que faciliten su adopción en distintas industrias.</p>
+                                <p class="fs-5 mb-4">Más información sobre el  <a href="https://language-data-space.ec.europa.eu">EU Language Data Space.</a></p>                               
+                            </section>
+                        </article>
+
+
+                        <!-- Post: Post content-->
                         <article id="post-18">
                             <!---- Post header ---->
                             <header class="mb-4">
@@ -432,6 +459,7 @@
                                 <ul style="text-align: left;">
                                 <!-- <ul class="list-unstyled mb-0"> -->
                                     
+                                    <li><a href="#post-19"><em>EU Language Data Space Launch Conference</em> 2025</a></li>                                    
                                     <li><a href="#post-18">Nuevo recurso en PLN legal: Publicado el Corpus de Cláusulas Contractuales en Español Legal (3CEL)</a></li>
                                     <li><a href="#post-17">1ª Cumbre de Espacios de Datos Gaia-X España: Presentación del Proyecto INESData</a></li>
                                     <li><a href="#post-16">UNICO I+D Project Meet-up Madrid 2024</a></li>
