--- a/content/es/documentos.html
+++ b/content/es/documentos.html
@@ -78,7 +78,7 @@
                           <h2 class="card-title">E4. Version preliminar del <em>handbook</em> (v1)</h2>
                           <p class="card-text">Handbook para ayudar en el despliegue de espacios de datos y de conocimientos en cualquier sector vertical, facilitando todos los aspectos relacionados con la gobernanza de datos y recursos semánticos, la gestión de roles dentro de los espacios de datos, y en general la configuración de la cooperación entre actores para la compartición de datos. 
                       </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1uSbFhZMxlmG1ETUPKymmvhVqq3eSUj0p/view?usp=sharing">Enlace</a>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://cloud.inesdata-project.eu/public.php/dav/files/3ktcj8GX98ibsBy/Deliverables/E4.1-Handbook_ES_v1.pdf">Enlace</a>
                         </div>
                     </div> 
                 </div>
