image carousel added, vertical data spaces added to navigation bar, partner logos added

--- a/content/es/repositorios.html
+++ b/content/es/repositorios.html
@@ -86,7 +86,7 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h2 class="card-title">INESData Dataspace Local Env</h2>
-                            <p class="card-text">El entorno INESData Dataspace Local Environment permite a los usuarios familiarizarse con el conector INESData y con los componentes principales del Espado de Datos. Mediante la ejecución del entorno local totalmente dockerizada para una ejecución sencilla, los usuarios pueden interactuar con un Espacio de Datos entre dos organizaciones, sus conectores, catalogos, etc.</p>
+                            <p class="card-text">El entorno INESData Dataspace Local Environment permite a los usuarios familiarizarse con el conector INESData y con los componentes principales del Espacio de Datos. Mediante la ejecución del entorno local totalmente dockerizada para una ejecución sencilla, los usuarios pueden interactuar con un Espacio de Datos entre dos organizaciones, sus conectores, catalogos, etc.</p>
                         </div>
                         <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://github.com/oeg-upm/inesdata-local-env">Enlace</a></div>
                     </div>
