new repositories added, data spaces webpages linked, imaghe carousel added to the main page

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -39,15 +39,15 @@
                                 <i class="bi bi-gear"></i> Data Spaces
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="../es/index.html">Mobility</a>
-                                <a class="dropdown-item" href="../en/index.html">Linguistic</a>
-                                <a class="dropdown-item" href="../es/index.html">Legal</a>
-                                <a class="dropdown-item" href="../es/index.html">Digital Media</a>
+                                <a class="dropdown-item" href="https://mobility.ds.inesdata-project.eu/home">Mobility</a>
+                                <a class="dropdown-item" href="https://labdemos.expertcustomers.ai/edl/en">Linguistic</a>
+                                <a class="dropdown-item" href="https://legal.ds.inesdata-project.eu/home">Legal</a>
+                                <a class="dropdown-item" href="../en/index.html">Digital Media</a>
                             </div>
                         </div>                        
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <div class="dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&#127760; Idioma</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&#127760; Language</a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="../es/index.html">Spanish</a>
                             <a class="dropdown-item" href="../en/index.html">English</a>
