--- a/content/es/index.html
+++ b/content/es/index.html
@@ -37,9 +37,9 @@
                                 <i class="bi bi-gear"></i> Espacios de Datos
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="../es/index.html">Movilidad</a>
-                                <a class="dropdown-item" href="../en/index.html">Lingüístico</a>
-                                <a class="dropdown-item" href="../es/index.html">Jurídico</a>
+                                <a class="dropdown-item" href="https://mobility.ds.inesdata-project.eu/home">Movilidad</a>
+                                <a class="dropdown-item" href="https://labdemos.expertcustomers.ai/edl">Lingüístico</a>
+                                <a class="dropdown-item" href="https://legal.ds.inesdata-project.eu/home">Jurídico</a>
                                 <a class="dropdown-item" href="../es/index.html">Medios digitales</a>
                             </div>
                         </div>                        
