--- a/content/en/success-form.html
+++ b/content/en/success-form.html
@@ -16,31 +16,48 @@
                 <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     </head>
     <body>
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-            <h1 class="logo navbar-brand text-center">
-                    <a href="index.html">
-                        Incubadora INESData
-                        <img src="../../assets/logos/inesdata-logo.png" alt="Logo INESData">
-                    </a>
+                <h1 class="logo navbar-brand text-center">
+                        <a href="index.html">
+                            Incubadora INESData
+                            <img src="../../assets/logos/inesdata-logo.png" alt="Logo INESData">
+                        </a>
                 </h1>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                
+                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Documentos</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Contacto</a></li>
-                    <!-- 
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Sobre nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Documentos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Servicios</a></li>
-                    -->
+                        <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Main</a></li> -->
+                        <!--<li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre...</a></li>-->
+                        <li class="nav-item"><a class="nav-link " href="repositories.html">Repositories</a></li>
+                        <li class="nav-item"><a class="nav-link " href="news.html">News</a></li>
+                        <li class="nav-item"><a class="nav-link" href="documents.html">Documents</a></li>
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="bi bi-gear"></i> Data Spaces
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="https://mobility.ds.inesdata-project.eu/home">Mobility</a>
+                                <a class="dropdown-item" href="https://labdemos.expertcustomers.ai/edl/en">Linguistic</a>
+                                <a class="dropdown-item" href="https://legal.ds.inesdata-project.eu/home">Legal</a>
+                                <a class="dropdown-item" href="../es/index.html">Digital Media</a>
+                            </div>
+                        </div>                        
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&#127760; Language</a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="../es/index.html">Spanish</a>
+                            <a class="dropdown-item" href="../en/index.html">English</a>
+                            </div>
+                        </div>
+                    
                     </ul>
-                </div>
+                <!-- </div> -->
             </div>
         </nav>
         <!-- Page Content-->
