--- a/content/es/documentos.html
+++ b/content/es/documentos.html
@@ -13,6 +13,7 @@
                 <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -23,32 +24,44 @@
             Incubadora INESData
             <img src="../../assets/logos/inesdata-logo.png" alt="Logo INESData">
         </a>
-    </h1>
-         
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    </h1>
+                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Principal</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Principal</a></li> -->
                         <!--<li class="nav-item"><a class="nav-link " href="proyecto.html">Sobre...</a></li>-->
                         <li class="nav-item"><a class="nav-link " href="repositorios.html">Repositorios</a></li>
                         <li class="nav-item"><a class="nav-link " href="noticias.html">Noticias</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="documentos.html">Documentos</a></li>
-                        <li class="nav-item"><a class="nav-link"  href="contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="documentos.html">Documentos</a></li>
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="bi bi-gear"></i> Espacios de Datos
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="https://mobility.ds.inesdata-project.eu/home">Movilidad</a>
+                                <a class="dropdown-item" href="https://labdemos.expertcustomers.ai/edl">Lingüístico</a>
+                                <a class="dropdown-item" href="https://legal.ds.inesdata-project.eu/home">Jurídico</a>
+                                <a class="dropdown-item" href="../es/index.html">Medios digitales</a>
+                            </div>
+                        </div>                        
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                         <div class="dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&#127760; Idioma</a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="../es/documentos.html">Español</a>
-                              <a class="dropdown-item" href="../en/documents.html">Ingles</a>
+                              <a class="dropdown-item" href="../es/index.html">Español</a>
+                              <a class="dropdown-item" href="../en/index.html">Inglés</a>
                             </div>
                         </div>
-                    <!-- 
+
+                        <!--
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Sobre nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Documentos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Servicios</a></li>
-                    -->
+                        -->
                     </ul>
-                </div>
+
+                <!-- </div> -->
             </div>
         </nav>
         <!-- Page Content-->
