--- a/content/es/contacto.html
+++ b/content/es/contacto.html
@@ -98,7 +98,7 @@
                             <input type="text" class="form-control" id="your-company" name="your-company" required>
                           </div>
                         <div class="col-md-6">
-                          <label for="your-email" class="form-label">Emaill</label>
+                          <label for="your-email" class="form-label">Email</label>
                           <input type="email" class="form-control" id="your-email" name="your-email" required>
                         </div>
                         <div class="col-md-6">
