video section added + news

--- a/content/es/contacto.html
+++ b/content/es/contacto.html
@@ -62,7 +62,8 @@
                           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                               <a class="dropdown-item" href="documentos.html">Documentos</a>
                               <a class="dropdown-item" href="catalogo_recursos.html">Catálogo</a>
-                              <a class="dropdown-item" href="repositorios.html">Repositorios</a>                                 
+                              <a class="dropdown-item" href="repositorios.html">Repositorios</a>
+                              <a class="dropdown-item" href="videos.html">Vídeos</a>                                 
                           </div>
                       </div>
                       
