--- a/content/en/documents.html
+++ b/content/en/documents.html
@@ -59,8 +59,9 @@
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="documents.html">Documents</a>
-                                <a class="dropdown-item" href="assets_catalog.html">Catalog</a>
-                                <a class="dropdown-item" href="repositories.html">Repositories</a>                                 
+                                <a class="dropdown-item" href="assets_catalog.html">Catalogue</a>
+                                <a class="dropdown-item" href="repositories.html">Repositories</a>
+                                <a class="dropdown-item" href="videos.html">Videos</a>                                 
                             </div>
                         </div>
                         
