--- a/content/en/assets_catalog.html
+++ b/content/en/assets_catalog.html
@@ -120,7 +120,56 @@
                     </tr>
                 </thead>
                 <tbody>
-                                       <tr>
+                    
+                <tr>
+                    <td>INESData Connector</td>
+                    <td>Data Space Component</td>
+                    <td>Based on EDC, the INESData Dataspace Connector implements additional features such as vocabulary management and configuration, new permission support, simple local persistence of datasets, etc. Check the latest connector releases for new features.</td>
+                    <td>Horizontal</td>
+                    <td>Yes</td>
+                    <td><a href="https://github.com/oeg-upm/inesdata-connector">Learn more</a></td>
+                </tr>
+                <tr>
+                    <td>INESData Dataspace Interface Connector</td>
+                    <td>Data Space Component</td>
+                    <td>Based on EDC Data Dashboard, the INESData Dataspace Interface Connector is a refactor of the project that applies best practices and conventions and implements full end-to-end negotiation and transfer between participants via an interface.</td>
+                    <td>Horizontal</td>
+                    <td>Yes</td>
+                    <td><a href="https://github.com/oeg-upm/inesdata-connector-interface">Learn more</a></td>
+                </tr>
+                <tr>
+                    <td>INESData Dataspace Local Env</td>
+                    <td>Data Space Component</td>
+                    <td>The INESData Dataspace Local Environment lets users get familiar with the INESData connector and the main Data Space components. By running the fully dockerized local environment for easy setup, users can interact with a Data Space between two organizations, their connectors, catalogs, etc.</td>
+                    <td>Horizontal</td>
+                    <td>Yes</td>
+                    <td><a href="https://github.com/oeg-upm/inesdata-local-env">Learn more</a></td>
+                </tr>
+                <tr>
+                    <td>INESData Dataspace Deployment</td>
+                    <td>Data Space Component</td>
+                    <td>This repository contains the code for the automated deployment of INESData platform components.</td>
+                    <td>Horizontal</td>
+                    <td>Yes</td>
+                    <td><a href="https://github.com/INESData/inesdata-deployment">Learn more</a></td>
+                </tr>
+                <tr>
+                        <td>INESData Public Dataspace Portal</td>
+                        <td>Data Space Component</td>
+                        <td>Public portal for a data space.</td>
+                        <td>Horizontal</td>
+                        <td>Yes</td>
+                        <td><a href="https://github.com/oeg-upm/inesdata-public-portal-frontend">Frontend</a> <a href="https://github.com/oeg-upm/inesdata-public-portal-backend">Backend</a></td>
+                    </tr>
+                <tr>
+                    <td>INESData Registration Service</td>
+                    <td>Data Space Component</td>
+                    <td>Centralized service designed to manage and federate the participants catalog.</td>
+                    <td>Horizontal</td>
+                    <td>Yes</td>
+                    <td><a href="https://github.com/INESData/inesdata-registration-service">Learn more</a></td>
+                </tr>
+                    <tr>
                         <td>mderanklib</td>
                         <td>Library</td>
                         <td>Library for term extraction</td>
