--- a/content/es/catalogo_recursos.html
+++ b/content/es/catalogo_recursos.html
@@ -120,6 +120,54 @@
                     </tr>
                 </thead>
                 <tbody>
+                     <tr>
+                        <td>Conector INESData</td>
+                        <td>Componente de Espacio de Datos</td>
+                        <td>Basado en EDC, INESData Dataspace Connector implementa funcionalidades adicionales como la gestión y configuración de vocabularios, la implementeción de nuevos permisos, la persistencia local de datasets de manera sencilla, etc. Comprueba las nuevas funcionalidades en las últmas versiones del conector.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://github.com/oeg-upm/inesdata-connector">Ver más</a></td>
+                    </tr>
+                     <tr>
+                        <td>INESData Dataspace Interface Connector</td>
+                        <td>Componente de Espacio de Datos</td>
+                        <td>Basado en EDC Data Dashboard, INESData Dataspace Interface Connector es una refactorización del proyecto con algunas buenas prácticas y convenciones e implementando una negociación y transferencia completa end-to-end entre los participantes mediante una interfaz.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://github.com/oeg-upm/inesdata-connector-interface">Ver más</a></td>
+                    </tr>
+                    <tr>
+                        <td>INESData Dataspace Local Env</td>
+                        <td>Componente de Espacio de Datos</td>
+                        <td>El entorno INESData Dataspace Local Environment permite a los usuarios familiarizarse con el conector INESData y con los componentes principales del Espacio de Datos. Mediante la ejecución del entorno local totalmente dockerizada para una ejecución sencilla, los usuarios pueden interactuar con un Espacio de Datos entre dos organizaciones, sus conectores, catalogos, etc.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://github.com/oeg-upm/inesdata-local-env">Ver más</a></td>
+                    </tr>
+                     <tr>
+                        <td>Despliegue de un Espacio de Datos INESData</td>
+                        <td>Componente de Espacio de Datos</td>
+                        <td>Este repositorio contiene el código para el despliegue automatizado de elementos de la plataforma INESData.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://github.com/INESData/inesdata-deployment">Ver más</a></td>
+                    </tr>
+                    <tr>
+                        <td>INESData Dataspace Portal Público</td>
+                        <td>Componente de Espacio de Datos</td>
+                        <td>Portal público para un espacio de datos.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://github.com/oeg-upm/inesdata-public-portal-frontend">Frontend</a> <a href="https://github.com/oeg-upm/inesdata-public-portal-backend">Backend</a></td>
+                    </tr>
+                    <tr>
+                        <td>INESData Registration Service</td>
+                        <td>Componente de Espacio de Datos</td>
+                        <td>Servicio centralizado diseñado para gestionar y federar el catálogo de participantes.</td>
+                        <td>Horizontal</td>
+                        <td>Sí</td>
+                        <td><a href="https://github.com/INESData/inesdata-registration-service">Ver más</a></td>
+                    </tr>
                     <tr>
                         <td>mderanklib</td>
                         <td>Librería</td>
