--- a/content/en/news.html
+++ b/content/en/news.html
@@ -89,6 +89,35 @@
                 <div class="row">
                     <div class="col-lg-8">
 
+
+                         <!-- Post: Post content-->
+                        <article id="post-26">
+                            <!---- Post header ---->
+                            <header class="mb-4">
+                                <!-- Post title-->
+                                <h1 class="fw-bolder mb-1 text-start">INESData Strengthens Its Synergies with the HARNESS Doctoral Network at Its 1st Training Workshop</h1>
+                                <!-- Post meta content-->
+                                <div class="text-muted fst-italic mb-2">Published on December 5, 2025 by INESData</div>
+                                <!-- Post categories-->
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">workshop</a>
+                                <a class="badge bg-secondary text-decoration-none link-light" href="#!">synergies</a>
+                            </header>
+                            <!-- Preview image figure-->
+                            <figure class="mb-4 d-flex justify-content-center">
+                                    <img class="img-fluid rounded me-2" src="../../assets/images/post-26a.jpeg" alt="Post image 26" style="width: 45%; height: auto;" />
+                                    <img class="img-fluid rounded ms-2" src="../../assets/images/post-26b.jpeg" alt="Post image 26 (secondary)" style="width: 45%; height: auto;" />
+                            </figure>
+                            <!-- Post content-->
+                            <section class="mb-5">
+                                <p class="fs-5 mb-4">INESData consolidates its collaboration with HARNESS by actively participating in its first training workshop, the <a href="https://harness-network.eu/workshops.html">1st HARNESS Training Workshop</a>, held from December 1-5 at the Lucas Olazábal Residence in Cercedilla (Madrid).</p>
+                                <p class="fs-5 mb-4"><a href="https://harness-network.eu/index.html">HARNESS</a> is a program funded by the European Union under the <a href="https://marie-sklodowska-curie-actions.ec.europa.eu/">Marie Skłodowska-Curie Actions</a>, dedicated to training an international group of 13 doctoral researchers with backgrounds in law, ethics, and computer science. Its objective is to jointly address the technical, legal, and ethical challenges arising from the proliferation of data-intensive systems and AI.</p>
+                                <p class="fs-5 mb-4">INESData participated on Day 2, within the session dedicated to <em>"Knowledge Representation, Data Spaces and Risk Assessment"</em>, delivering its presentation <em>"Introduction to Data Spaces: INESData"</em></p>
+                                <p class="fs-5 mb-4">Thanks to the extensive experience gained throughout the project, INESData contributes to contextualizing the technical, regulatory, and ethical challenges associated with Data Spaces, offering a clear vision of their evolution and maturity in Europe. During the session, discussions also addressed the key actors driving the European data ecosystem, the European Data Strategy, and the different layers of interoperability—technical, semantic, organizational, and legal—necessary to ensure safe, efficient data exchange aligned with regulation.</p>
+                                <p class="fs-5 mb-4">Collaboration with HARNESS is a further step in creating synergies between research, technology, and regulation, where INESData contributes its expertise in data infrastructures, vocabularies, data intelligence, and data governance. HARNESS integrates law, ethics, and computer science to develop data ecosystems that are interoperable and aligned with European regulation, drives the operationalization of data and AI regulations, and will train 13 researchers who will contribute to the future of the European data ecosystem.</p>
+                            </section>
+                        </article>
+
+
                         <!-- Post: Post content-->
                         <article id="post-25">
                             <!---- Post header ---->
@@ -395,6 +424,7 @@
                                 <ul style="text-align: left;">
                                 <!-- <ul class="list-unstyled mb-0"> -->
                                     
+                                    <li><a href="#post-26">INESData with HARNESS at its 1st Training Workshop</a></li>
                                     <li><a href="#post-25">INESData at the ELDS Country Workshop in Spain</a></li>
                                     <li><a href="#post-24">The INESData team participated in the 10th International Congress of the Spanish Language</a></li>
                                     <li><a href="#post-22">We are launching a new INESData videos section</a></li>
